--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-test
+<html>
+  <body style="background-color:Red;">
+    <center>
+       <h1><font size=8>Finally, this is done...!!!</font></h1>
+       <p1> Labs are Completed - Avishek Ghimire </p1>
+    </center>
+</html>
