Adding the jenkins trigger job

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <center>
        <h1><font size=8>Finally, this is done...!!!</font></h1>
        <p1> Labs are Completed - Avishek Ghimire </p1>
+       <p2> <font size=12>Testing Jenkins Trigger Job</font> <p2>
     </center>
 </html>
